trunk/Archive2/1d/e82672b31c4bbf/output
main.cpp:8:5: error: call to 'foo' is ambiguous
    foo(i);
    ^~~
main.cpp:1:6: note: candidate function
void foo(long long) { }
     ^
main.cpp:2:6: note: candidate function
void foo(unsigned long long) { }
     ^
main.cpp:3:6: note: candidate function
void foo(long double) { }
     ^
1 error generated.
