trunk/Archive2/1d/e82672b31c4bbf/main.cpp
void foo(long long) { }
void foo(unsigned long long) { }
void foo(long double) { }

int main()
{
    int i = 0;
    foo(i);
}
